changed column headers and updated scripts

--- a/static/dashboard_stylesheet.css
+++ b/static/dashboard_stylesheet.css
@@ -48,7 +48,7 @@ body {
   }
   
   /* Adjusting the size of the pie charts */
-  #courseStatusChart,
+  #clinicStatusChart,
   #sleepDisorderChart {
     height: 250px;
   }
