--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,8 +49,8 @@
         <section>
             <div class="chart-row">
                 <div class="chart-container half-width">
-                    <h2>Course Status</h2>
-                    <canvas id="courseStatusChart"></canvas>
+                    <h2>Clinic Status</h2>
+                    <canvas id="clinicStatusChart"></canvas>
                 </div>
                 <div class="chart-container half-width">
                     <h2>Sleep Disorders</h2>
